# mac-soft-rs

./: Cargo.toml  launcher.sh
.github/workflows/: release.yml
src/: main.rs
