[package]
name = "mac-soft-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
dirs = "5.0.1"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
